# fastapi-demo

./: pyproject.toml
src/api/: index.py
src/fastapi-demo/: main.py
src/fastapi_demo/: main.py
