[project]
name = "fastapi-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
dependencies = [
    "cryptography>=49.0.0",
    "fastapi>=0.139.0",
    "mangum",
    "prometheus-client>=0.25.0",
    "pydantic[email]>=2.13.4",
    "pyjwt>=2.13.0",
    "redis>=8.0.1",
    "uvicorn[standard]>=0.49.0",
]

requires-python = ">=3.11.3"

[tool.uv]
dev-dependencies = []

[tool.vercel]
entrypoint = "src.api.index:app"
